# pico_lora

./: CMakeLists.txt  Doxyfile  README.md
doxygen/html/: annotated.html  classComm-members.html  classComm.html  classProtocol-members.html  classProtocol.html  classUart-members.html  classUart.html  classUsb-members.html  classUsb.html  classes.html  comm_8hh.html  comm_8hh_source.html  dir_096edd736099c49265a202d9589d50b3.html  dir_64df5a91b80aec2b33e4381d779517e8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7c98e9d5bcf6cb30f431e84694a3bdb1.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  index.html  protocol_8hh.html  protocol_8hh_source.html  uart_8hh.html  uart_8hh_source.html  usb_8hh.html  usb_8hh_source.html
doxygen/latex/: annotated.tex  classComm.tex  classProtocol.eps  classProtocol.tex  classUart.eps  classUart.tex  classUsb.eps  classUsb.tex  comm_8hh.tex  comm_8hh_source.tex  files.tex  hierarchy.tex  index.tex  protocol_8hh.tex  protocol_8hh_source.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  uart_8hh.tex  uart_8hh_source.tex  usb_8hh.tex  usb_8hh_source.tex
include/Comm/: comm.h  comm.hh  protocol.hh  uart.hh  usb.hh
include/PicoHal/: PicoHal.h
roles/: CMakeLists.txt
roles/client/: CMakeLists.txt  client.cpp
roles/router/: CMakeLists.txt  control_panel.py  router.cpp  status_panel.py
src/: CMakeLists.txt
src/Comm/: CMakeLists.txt  comm.c  comm.cpp  uart.cpp  usb.cpp
(+18 files in other folders)
